# prochain-substrate

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  PRA(ERC20)到PRA主链兑换方案.md  ProChain安全体系建设方案.md  README.adoc  README.md  customSpec.json  customSpecRaw.json  initial_drop.json  intial_drop.json  package-lock.json
.maintain/: check_for_exit.sh  common.sh
.maintain/gitlab/: check_runtime.sh
.maintain/node-template-release/: Cargo.toml
cli/: Cargo.toml
cli/browser-demo/: index.html
cli/src/: browser.rs  chain_spec.rs  cli.rs  command.rs  factory_impl.rs  service.rs
eth-contracts/: init.sh  truffle-config.js
eth-contracts/contracts/: ERC20HTLC.sol
eth-contracts/test/: ERC20Test.js
eth-erc20-swap/: PRA(ERC20)到PRA主链兑换方案.md
eth-erc20-swap/calculate-ids/: calculate-ids.js  package.json
eth-erc20-swap/eth-contracts/: build-develop.sh  deploy-ropsten.sh  init.sh  package-lock.json  package.json  truffle-config.js
eth-erc20-swap/eth-contracts/contracts/: ERC20HTLC.sol
eth-erc20-swap/eth-contracts/test/: ERC20Test.js
eth-erc20-swap/substrate-deputy/: index.js  package.json
ethereum/: PRA(ERC20)到PRA主链兑换方案.md
ethereum/calculate-ids/: calculate-ids.js  package-lock.json  package.json
ethereum/erc20-htlc-swap/: .env.development  .env.production  .eslintrc.js  .gitignore  bs-config.json  build-develop.sh  deploy-mainnet.sh  index.js  init.sh  package-lock.json  package.json  postcss.config.js  readme.md  start-develop.sh  truffle-config.js  vue.config.js
ethereum/erc20-htlc-swap/build.old/contracts/: Migrations.json  Token.json
ethereum/erc20-htlc-swap/contract-dist/: ERC20.json  ERC20HTLC.sol  Migrations.json  PraTokenV5.8.sol  StandardToken.json  tokenRecipient.json
ethereum/erc20-htlc-swap/contracts/: ERC20HTLCLite.sol  PraTokenV4.8.sol
ethereum/erc20-htlc-swap/migrations/: 2_deploy_contract.js
ethereum/erc20-htlc-swap/public/: ERC20HTLC.json  ERC20HTLCLite.json  ProTokenMainnet.json  index.html
ethereum/erc20-htlc-swap/src/: App.vue  index.html  main.js  vee-validate.js
ethereum/erc20-htlc-swap/src/assets/css/: my-mixins.scss  reset.css  style.customize.scss  variables.scss
ethereum/erc20-htlc-swap/src/components/: error.vue  loading.vue
ethereum/erc20-htlc-swap/src/filters/: index.js
ethereum/erc20-htlc-swap/src/i18n/: index.js
ethereum/erc20-htlc-swap/src/i18n/langs/: zh.js
ethereum/erc20-htlc-swap/src/js/: app.js
ethereum/erc20-htlc-swap/src/router/: index.js
ethereum/erc20-htlc-swap/src/util/: api.js  app.js  axios.js  common.js
ethereum/erc20-htlc-swap/src/views/: htlc.vue
ethereum/erc20-htlc-swap/src/vuex/: actions.js  index.js  mutations.js
ethereum/erc20-htlc-swap/test/: ERC20Test.js
ethereum/substrate-deputy/: .gitignore  index.js  package-lock.json  package.json  readme.md
executor/: Cargo.toml
executor/benches/: bench.rs
inspect/: Cargo.toml
inspect/src/: command.rs  lib.rs
modules/ads/: Cargo.toml
modules/ads/src/: array_list.rs  lib.rs  tests.rs
modules/did/: Cargo.toml
modules/did/src/: check.rs  harsh.rs  lib.rs  tests.rs
modules/prices/src/: lib.rs
modules/utilities/src/: fixed128.rs  lib.rs
node/cli/: Cargo.toml  build.rs
node/cli/src/: browser.rs  chain_spec.rs  cli.rs  factory_impl.rs  lib.rs  service.rs
node/executor/: Cargo.toml
node/executor/benches/: bench.rs
node/executor/src/: lib.rs
node/harsh/: Cargo.toml
node/harsh/src/: lib.rs
node/inspect/: Cargo.toml
node/modules/ads/: Cargo.toml
node/modules/ads/src/: lib.rs  tests.rs
node/modules/did/: Cargo.toml
node/modules/did/src/: lib.rs
node/modules/prices/: Cargo.toml
node/modules/prices/src/: lib.rs
node/modules/utilities/: Cargo.toml
node/primitives/: Cargo.toml
node/rpc/: Cargo.toml
node/rpc-client/: Cargo.toml
node/rpc/src/: lib.rs
node/runtime/: Cargo.toml
node/runtime/src/: constants.rs  did.rs  impls.rs  lib.rs  oracle.rs
node/testing/: Cargo.toml
node/testing/src/: genesis.rs  lib.rs
node/transaction-factory/: Cargo.toml
node/transaction-factory/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
resources/: v0.9.0.json  v0.9.0.raw.json
rpc/: Cargo.toml
runtime/: Cargo.toml  build.rs
runtime/src/: b58.rs  check.rs  constants.rs  did.rs  impls.rs  lib.rs  linked_item.rs  oracle.rs  tests.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
test-utils/chain-spec-builder/: Cargo.toml
test-utils/client/: Cargo.toml
test-utils/client/src/: client_ext.rs  lib.rs
test-utils/runtime/: Cargo.toml
test-utils/runtime/client/: Cargo.toml
test-utils/runtime/client/src/: block_builder_ext.rs  lib.rs  trait_tests.rs
test-utils/transaction-factory/: Cargo.toml
test/utils/chain-spec-builder/: Cargo.toml
test/utils/client/: Cargo.toml
test/utils/primitives/: Cargo.toml
test/utils/runtime/: Cargo.toml
test/utils/runtime/client/: Cargo.toml
test/utils/transaction-factory/: Cargo.toml
testnet/: v0.9.0.json  v0.9.0.raw.json  v1.0.0.json  v1.0.0.raw.json
tests/: mod.rs
transaction-factory/: Cargo.toml
utils/browser/: Cargo.toml
utils/chain-spec-builder/: Cargo.toml
utils/fork-tree/src/: lib.rs
utils/frame/rpc/support/: Cargo.toml
utils/frame/rpc/system/: Cargo.toml
