[workspace]
members = [
	"core/utils/fork-tree",
	"core/utils/wasm-builder",
	"core/utils/wasm-builder-runner",
	"node/cli",
	"node/executor",
	"node/primitives",
	"node/rpc",
	"node/rpc-client",
	"node/runtime",
	"node/testing",
	"test-utils/chain-spec-builder",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
