[workspace]
members = [
	"bin/node/cli",
	"bin/node/executor",
	"bin/node/primitives",
	"bin/node/rpc-client",
	"bin/node/rpc",
	"bin/node/modules/did",
	"bin/node/modules/ads",
	"bin/node/modules/prices",
	"bin/node/runtime",
	"bin/node/testing",
	"bin/node/transaction-factory",
	"bin/utils/chain-spec-builder",
	"test-utils/client",
	"test-utils/runtime",
	"test-utils/runtime/client",
	"utils/wasm-builder-runner",
	"utils/grafana-data-source",
	"utils/grafana-data-source/test",
	"utils/browser",
	"utils/build-script-utils",
	"utils/fork-tree",
	"utils/frame/rpc/support",
	"utils/frame/rpc/system",
	"utils/wasm-builder"
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
