[workspace]
members = [
	"node/cli",
	"node/executor",
	"node/primitives",
	"node/rpc-client",
	"node/rpc",
	"node/modules/did",
	"node/modules/ads",
	"node/modules/prices",
	"node/runtime",
	"node/testing",
	"node/transaction-factory",
	"utils/chain-spec-builder",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
