[package]
name = "node-primitives"
version = "2.0.0"
authors = ["hlm"]
edition = "2018"

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[features]
default = ["std"]
std = [
	"primitives/std",
	"sr-primitives/std",
]
