[package]
name = "node-rpc"
version = "2.0.0-rc3"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-client-api = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
jsonrpc-core = "14.0.3"
node-primitives = { version = "2.0.0-rc3", path = "../primitives" }
node-runtime = { version = "2.0.0-rc3", path = "../runtime" }
sp-runtime = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
sp-api = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
pallet-contracts-rpc = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
pallet-transaction-payment-rpc = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
substrate-frame-rpc-system = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
sp-transaction-pool = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
sc-consensus-babe = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
sc-consensus-babe-rpc = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
sp-consensus-babe = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
sc-keystore = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
sc-consensus-epochs = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
sp-consensus = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
sp-blockchain = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
sc-finality-grandpa = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
sc-finality-grandpa-rpc = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
sc-rpc-api = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
