[features]
default = ['std']
no_std = []
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'babe/std',
    'babe-primitives/std',
    'executive/std',
    'indices/std',
    'grandpa/std',
    'primitives/std',
    'sr-primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde',
    'regex/std',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
    'contracts/std',
    'democracy/std',
    'im-online/std',
    'offences/std',
    'rustc-hex',
    'session/std',
    'sr-staking-primitives/std',
    'staking/std',
    'collective/std',
    'treasury/std',
]
[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.2'

[package]
authors = ['hlm']
edition = '2018'
name = 'prochain-runtime'
version = '2.0.0'

[dependencies.regex]
default-features = false
package = 'regex'
version = "1.3.1"
optional = true

[dependencies.babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-babe'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.babe-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.rustc-hex]
optional = true
version = '2.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.app-crypto]
default_features = false
git = "https://github.com/paritytech/substrate/"
package = "substrate-application-crypto"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.contracts]
default_features = false
git = "https://github.com/paritytech/substrate/"
package = "srml-contracts"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.democracy]
default_features = false
git = "https://github.com/paritytech/substrate/"
package = "srml-democracy"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.im-online]
default_features = false
git = "https://github.com/paritytech/substrate/"
package = "srml-im-online"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.offences]
default_features = false
git = "https://github.com/paritytech/substrate/"
package = "srml-offences"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.session]
default_features = false
git = "https://github.com/paritytech/substrate/"
package = "srml-session"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.staking]
default_features = false
git = "https://github.com/paritytech/substrate/"
package = "srml-staking"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.sr-staking-primitives]
default_features = false
git = "https://github.com/paritytech/substrate/"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.srml-staking-reward-curve]
default_features = false
git = "https://github.com/paritytech/substrate/"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.treasury]
default_features = false
git = "https://github.com/paritytech/substrate/"
package = "srml-treasury"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.authorship]
default_features = false
git = "https://github.com/paritytech/substrate/"
package = "srml-authorship"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.collective]
default_features = false
git = "https://github.com/paritytech/substrate/"
package = "srml-collective"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
