[package]
name = "ads"
version = "0.1.0"
authors = ["qc90 <qc90@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
serde = { version = "1.0.102", optional = true }
did = { path = "../did", default-features = false }

# primitives
node-primitives = { version = "2.0.0-dev", path = "../../primitives", default-features = false }
sp-core = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git", default-features = false }
sp-std = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git", default-features = false }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git",default-features = false }
sp-io = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git", default-features = false }

# frame dependencies
pallet-balances = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git", default-features = false }
frame-support = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git", default-features = false }
frame-system = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git", default-features = false }
pallet-timestamp = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git", default-features = false }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"pallet-balances/std",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"did/std",
]