[package]
name = "node-cli"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
build = "build.rs"
edition = "2018"
default-run = "prochain"

[badges]
travis-ci = { repository = "paritytech/substrate", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "prochain"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.0.6" }
serde = { version = "1.0.102", features = [ "derive" ] }
futures = "0.1.29"
hex-literal = "0.2.1"
jsonrpc-core = "14.0.3"
log = "0.4.8"
rand = "0.7.2"
structopt = "0.3.3"

# primitives
primitives = { package = "substrate-primitives", git = "https://github.com/ProChain/substrate.git" }
sr-primitives = { git = "https://github.com/ProChain/substrate.git" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/ProChain/substrate.git" }
grandpa_primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/ProChain/substrate.git" }

# core dependencies
runtime-io = { package = "sr-io", git = "https://github.com/ProChain/substrate.git" }
client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git" }
inherents = { package = "substrate-inherents", git = "https://github.com/ProChain/substrate.git" }
chain-spec = { package = "substrate-chain-spec", git = "https://github.com/ProChain/substrate.git" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/ProChain/substrate.git" }
network = { package = "substrate-network", git = "https://github.com/ProChain/substrate.git" }
babe = { package = "substrate-consensus-babe", git = "https://github.com/ProChain/substrate.git" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
keyring = { package = "substrate-keyring", git = "https://github.com/ProChain/substrate.git" }
client_db = { package = "substrate-client-db", git = "https://github.com/ProChain/substrate.git", default-features = false }
offchain = { package = "substrate-offchain", git = "https://github.com/ProChain/substrate.git" }
substrate-rpc = { package = "substrate-rpc", git = "https://github.com/ProChain/substrate.git" }
substrate-basic-authorship = { git = "https://github.com/ProChain/substrate.git" }
substrate-service = { git = "https://github.com/ProChain/substrate.git", default-features = false }
substrate-telemetry = { package = "substrate-telemetry", git = "https://github.com/ProChain/substrate.git" }

# srml dependencies
indices = { package = "srml-indices", git = "https://github.com/ProChain/substrate.git" }
timestamp = { package = "srml-timestamp", git = "https://github.com/ProChain/substrate.git", default-features = false }
finality_tracker = { package = "srml-finality-tracker", git = "https://github.com/ProChain/substrate.git", default-features = false }
contracts = { package = "srml-contracts", git = "https://github.com/ProChain/substrate.git" }
system = { package = "srml-system", git = "https://github.com/ProChain/substrate.git" }
balances = { package = "srml-balances", git = "https://github.com/ProChain/substrate.git" }
transaction-payment = { package = "srml-transaction-payment", git = "https://github.com/ProChain/substrate.git" }
support = { package = "srml-support", git = "https://github.com/ProChain/substrate.git", default-features = false }
im_online = { package = "srml-im-online", git = "https://github.com/ProChain/substrate.git", default-features = false }

# node-specific dependencies
node-runtime = { path = "../runtime" }
node-rpc = { path = "../rpc" }
node-primitives = { path = "../primitives" }
node-executor = { path = "../executor" }

# CLI-specific dependencies
tokio = { version = "0.1.22", optional = true }
exit-future = { version = "0.1.4", optional = true }
substrate-cli = { git = "https://github.com/ProChain/substrate.git", optional = true }
transaction-factory = { path = "../../test-utils/transaction-factory", optional = true }
ctrlc = { version = "3.1.3", features = ["termination"], optional = true }

# WASM-specific dependencies
libp2p = { version = "0.13.0", default-features = false, optional = true }
clear_on_drop = { version = "0.2.3", features = ["no_cc"], optional = true }	# Imported just for the `no_cc` feature
console_error_panic_hook = { version = "0.1.1", optional = true }
console_log = { version = "0.1.2", optional = true }
js-sys = { version = "0.3.22", optional = true }
wasm-bindgen = { version = "0.2.45", optional = true }
wasm-bindgen-futures = { version = "0.3.22", optional = true }
kvdb-memorydb = { git = "https://github.com/paritytech/parity-common", rev="b0317f649ab2c665b7987b8475878fc4d2e1f81d", optional = true }
rand6 = { package = "rand", version = "0.6", features = ["wasm-bindgen"], optional = true }	# Imported just for the `wasm-bindgen` feature

[dev-dependencies]
keystore = { package = "substrate-keystore", git = "https://github.com/ProChain/substrate.git" }
babe = { package = "substrate-consensus-babe", git = "https://github.com/ProChain/substrate.git", features = ["test-helpers"] }
consensus-common = { package = "substrate-consensus-common", git = "https://github.com/ProChain/substrate.git" }
service-test = { package = "substrate-service-test", git = "https://github.com/ProChain/substrate.git" }
futures03 = { package = "futures-preview", version = "0.3.0-alpha.19" }
tempfile = "3.1.0"

[build-dependencies]
substrate-cli = { package = "substrate-cli", git = "https://github.com/ProChain/substrate.git" }
build-script-utils = { package = "substrate-build-script-utils", path = "../../core/utils/build-script-utils" }
structopt = "0.3.3"
vergen = "3.0.4"

[features]
default = ["cli"]
browser = [
	"clear_on_drop",
	"console_error_panic_hook",
	"console_log",
	"js-sys",
	"libp2p",
	"wasm-bindgen",
	"wasm-bindgen-futures",
	"kvdb-memorydb",
	"rand/wasm-bindgen",
	"rand6"
]
cli = [
	"substrate-cli",
	"transaction-factory",
	"tokio",
	"exit-future",
	"ctrlc",
	"substrate-service/rocksdb"
]
